Improve WebUI and fix "software-generated" collision

--- a/webui/static/style.css
+++ b/webui/static/style.css
@@ -47,6 +47,10 @@ a.collection-item > .material-icons {
     float: right;
 }
 
+.turnoff {
+    text-align: center;
+}
+
 /* Dark theme */
 .chkbox label {
     color: #eeeeee;
